--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,36 +1,57 @@
 services:
+  # Servidor PHP per a Laravel
   app:
     build:
       context: .
-      dockerfile: .Dockerfile
-    image: laravel-app
+      dockerfile: Dockerfile
     container_name: laravel_app
-    restart: unless-stopped
-    working_dir: /var/www
-    volumes:
-      - ./:/var/www
     ports:
-      - "9000:9000"
+      - "8000:8000"
+    volumes:
+      - .:/var/www
+    networks:
+      - laravel_network
+    depends_on:
+      - db
     environment:
+      - DB_CONNECTION=mysql
       - DB_HOST=db
       - DB_PORT=3306
       - DB_DATABASE=laravel
       - DB_USERNAME=root
-      - DB_PASSWORD=secret
-    depends_on:
-      - db
+      - DB_PASSWORD=root
 
+  # Base de dades MySQL
   db:
-    image: mariadb:10.4.32
-    container_name: mariadb_db
-    restart: unless-stopped
+    image: mysql:5.7
+    container_name: mysql_db
     environment:
-      MYSQL_ROOT_PASSWORD: secret
+      MYSQL_ROOT_PASSWORD: root
       MYSQL_DATABASE: laravel
     ports:
       - "3306:3306"
     volumes:
-      - dbdata:/var/lib/mysql
+      - db_data:/var/lib/mysql
+    networks:
+      - laravel_network
+
+  # phpMyAdmin per gestionar la base de dades
+  phpmyadmin:
+    image: phpmyadmin/phpmyadmin
+    container_name: phpmyadmin
+    environment:
+      MYSQL_ROOT_PASSWORD: root
+    ports:
+      - "8080:80"
+    networks:
+      - laravel_network
+    depends_on:
+      - db
+
+networks:
+  laravel_network:
+    driver: bridge
 
 volumes:
-  dbdata:
+  db_data:
+    driver: local
