Actualització de la imatge de Docker HUB

--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -27,7 +27,7 @@ jobs:
           context: .
           file: Dockerfile
           push: true
-          tags: your_dockerhub_username/your_repository:latest
+          tags: cgalleluoc/gh_laravel:latest
 
       - name: Install Railway CLI
         run: npm install -g @railway/cli
