--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -30,7 +30,7 @@ jobs:
           tags: cgalleluoc/gh_laravel:latest
 
       - name: Install SSH client
-        run: apt-get update && apt-get install -y openssh-client
+        run: sudo apt-get update && sudo apt-get install -y openssh-client
 
       - name: Copy SSH key
         run: |
