--- a/.env
+++ b/.env
@@ -22,11 +22,11 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=mysql.railway.internal
+DB_HOST=db
 DB_PORT=3306
-DB_DATABASE=railway
-DB_USERNAME=root
-DB_PASSWORD=OwgfakiYojVtOXOteklcKUAkbOZrsRhW
+DB_DATABASE=laravel
+DB_USERNAME=laravel
+DB_PASSWORD=laravel
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
